feat: indicator frontend ui.

--- a/views/_base.html
+++ b/views/_base.html
@@ -45,6 +45,17 @@
             </div>
         </header>
 
+        <!-- THE IDENTIFIER -->
+        <section id="identifier">
+            <!-- THE CONTAINER -->
+            <div class="container">
+                <!-- THE INDICATOR -->
+                <a href="https://twitter.com" id="indicator-link" target="_blank">
+                    <h2 id="indicator" title="Indicator of the logged in instance.">X-AUTO DEFAULT</h2>
+                </a>
+            </div>
+        </section>
+
         <!-- THE CONTENT -->
         <main id="content">
             <!-- THE CONTAINER -->
