--- a/public/css/base.css
+++ b/public/css/base.css
@@ -85,7 +85,7 @@ body {
   background-color: #111111;
   display: grid;
   grid-gap: 25px;
-  grid-template-rows: 75px auto 50px;
+  grid-template-rows: 75px 50px auto 50px;
 }
 body .hidden {
   display: none;
@@ -173,6 +173,16 @@ body #header .container #menu button:hover {
 body #header .container #menu button:hover:active {
   box-shadow: none;
   transform: translate(3px, 3px);
+}
+body #identifier {
+  width: 100%;
+  height: 50px;
+}
+body #identifier .container #indicator {
+  color: #7cc0ff;
+  font-size: 20px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 body #footer {
   width: 100%;
