--- a/sass/base.scss
+++ b/sass/base.scss
@@ -10,7 +10,7 @@ body {
 
     display: grid;
     grid-gap: 25px;
-    grid-template-rows: 75px auto 50px;
+    grid-template-rows: 75px 50px auto 50px;
 
     .hidden {
         display: none;
@@ -119,6 +119,20 @@ body {
                         }
                     }
                 }
+            }
+        }
+    }
+
+    #identifier {
+        width: 100%;
+        height: 50px;
+
+        .container {
+            #indicator {
+                color: $blue;
+                font-size: 20px;
+                font-weight: bold;
+                text-transform: uppercase;
             }
         }
     }
