feat: script to show indicator.

--- a/views/_base.html
+++ b/views/_base.html
@@ -73,5 +73,20 @@
                 <p id="copyright">Copyright (c) 2023 - <a href="mailto:ahmad@shahzad.dev">Ahmad Shahzad</a></p>
             </div>
         </footer>
+
+        <!-- THE SCRIPTS -->
+        <script>
+            let apiURL = '/api/v1';
+            let apiMiscURL = `${apiURL}/misc`;
+
+            let api = {
+                misc: {
+                    indicator: `${apiMiscURL}/indicator`,
+                },
+            };
+        </script>
+        <script src="/js/base/handleIndicator.js"></script>
+
+        <!-- THE SCRIPTS BLOCK -->
     </body>
 </html>
