--- a/public/css/base.css
+++ b/public/css/base.css
@@ -77,6 +77,86 @@ h6 {
   font-family: "Inria Sans", sans-serif;
 }
 
+#error-overlay {
+  z-index: 15;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  opacity: 0.85;
+  background-color: #000000;
+}
+
+#error-modal {
+  z-index: 20;
+  top: 50%;
+  left: 50%;
+  position: fixed;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 400px;
+  padding: 25px;
+  padding-bottom: 50px;
+  border: 3px solid #ff1b1b;
+  background-color: #000000;
+  gap: 25px;
+  display: flex;
+  flex-direction: column;
+}
+#error-modal #error-modal-heading {
+  color: #ff1b1b;
+  font-size: 24px;
+  text-align: center;
+  text-transform: uppercase;
+}
+#error-modal #error-modal-message {
+  font-size: 18px;
+}
+#error-modal #error-modal-content {
+  color: #999999;
+  padding: 15px;
+  border: 2px dashed #555555;
+  overflow: auto;
+  max-height: 35vh;
+}
+#error-modal #error-modal-content::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+  display: none;
+}
+#error-modal #error-modal-content::-webkit-scrollbar-track {
+  background-color: #333;
+  box-shadow: 0 0 0 2px #777;
+  border-radius: 10px;
+}
+#error-modal #error-modal-content::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 10px;
+}
+#error-modal #error-modal-content:hover::-webkit-scrollbar {
+  display: initial;
+}
+#error-modal #error-modal-close {
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  color: #111111;
+  border: none;
+  background-color: #ff1b1b;
+  font-size: 24px;
+  position: absolute;
+  right: -25px;
+  bottom: -25px;
+}
+#error-modal #error-modal-close:hover {
+  box-shadow: -3px -3px #ffffff;
+}
+#error-modal #error-modal-close:hover:active {
+  box-shadow: none;
+  transform: translate(-3px, -3px);
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -88,7 +168,7 @@ body {
   grid-template-rows: 75px 50px auto 50px;
 }
 body .hidden {
-  display: none;
+  display: none !important;
 }
 body .container {
   width: 100%;
