--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,4 +1,5 @@
 @import './shared';
+@import './modals/error';
 
 body {
     width: 100%;
@@ -13,7 +14,7 @@ body {
     grid-template-rows: 75px 50px auto 50px;
 
     .hidden {
-        display: none;
+        display: none !important;
     }
 
     .container {
