feat: scripts block.

--- a/views/_base.html
+++ b/views/_base.html
@@ -100,5 +100,6 @@
         <script src="/js/base/handleIndicator.js"></script>
 
         <!-- THE SCRIPTS BLOCK -->
+        {% block scripts %} {% endblock %}
     </body>
 </html>
