--- a/views/home/home.html
+++ b/views/home/home.html
@@ -1,1 +1,13 @@
 {% extends '../_base.html' %}
+
+<!-- THE TITLE BLOCK -->
+{% block title %} X-AUTO {% endblock %}
+
+<!-- THE STYLES BLOCK -->
+{% block styles %} {% endblock %}
+
+<!-- THE CONTENT BLOCK -->
+{% block content %} {% endblock %}
+
+<!-- THE SCRIPTS BLOCK -->
+{% block scripts %} {% endblock %}
