--- a/sass/home/home.scss
+++ b/sass/home/home.scss
@@ -1,2 +1,11 @@
 @import '../shared/colors';
 @import '../shared/form';
+
+body {
+    #content {
+        .container {
+            flex-direction: column;
+            gap: 50px;
+        }
+    }
+}
