--- a/views/home/home.html
+++ b/views/home/home.html
@@ -13,7 +13,7 @@
 <!-- THE RETWEET FORM -->
 <form class="form retweet-form" data-retweet-id="0" onsubmit="event.preventDefault();">
     <!-- THE INDEX -->
-    <p class="form-index" class="hidden">0</p>
+    <p class="form-index hidden">0</p>
 
     <!-- THE HEADING -->
     <h3 class="form-heading" data-retweet-id="0">Create a Retweet</h3>
@@ -55,7 +55,83 @@
     </div>
 </form>
 <!-- END RETWEET FORM -->
+
+<!-- THE TWEET FORM -->
+<form class="form tweet-form" data-tweet-id="0" onsubmit="event.preventDefault();">
+    <!-- THE INDEX -->
+    <p class="form-index hidden">0</p>
+
+    <!-- THE HEADING -->
+    <h3 class="form-heading" data-tweet-id="0">Create a Tweet</h3>
+
+    <!-- THE ID -->
+    <input type="number" name="id" class="form-input hidden" data-tweet-id="0" value="0" />
+
+    <!-- THE FORM CONTAINER -->
+    <div class="form-container">
+        <!-- THE FORM DIVISION -->
+        <div class="form-division">
+            <!-- THE MESSAGE -->
+            <textarea
+                name="message"
+                class="form-textarea"
+                data-tweet-id="0"
+                placeholder="What is happening?!"></textarea>
+
+            <!-- THE LINK -->
+            <input
+                type="url"
+                name="link"
+                class="form-input"
+                data-tweet-id="0"
+                placeholder="http(s)://(www.)example.org" />
+        </div>
+
+        <!-- THE FORM DIVISION -->
+        <div class="form-division">
+            <!-- THE MEDIA -->
+            <section class="form-media" data-tweet-id="0">
+                <!-- THE DROP ZONE -->
+                <div class="form-media-drop-zone" data-tweet-id="0">Drop media here!</div>
+
+                <!-- THE GALLERY -->
+                <div class="form-media-gallery hidden" data-tweet-id="0"></div>
+
+                <!-- THE SECONDARY GALLERY -->
+                <div class="form-media-gallery secondary hidden" data-tweet-id="0">
+                    <input type="text" name="images" class="form-input hidden" data-tweet-id="0" value="null" />
+                </div>
+
+                <!-- THE FILE INPUT -->
+                <input type="file" name="files" class="hidden" data-tweet-id="0" multiple />
+
+                <!-- THE MEDIA INPUT -->
+                <input type="text" name="media" class="form-input hidden" data-tweet-id="0" />
+            </section>
+        </div>
+
+        <!-- THE FORM DIVISION -->
+        <div class="form-division">
+            <!-- THE TIME -->
+            <input type="datetime-local" name="time" class="form-input" data-tweet-id="0" />
+
+            <!-- THE FORM BUTTONS -->
+            <section class="form-buttons" data-tweet-id="0">
+                <button class="form-button form-button-schedule" data-tweet-id="0">Schedule</button>
+
+                <button class="form-button form-button-automate" data-tweet-id="0">
+                    <i class="fa-regular fa-paper-plane"></i>
+                </button>
+
+                <button class="form-button form-button-publish" data-tweet-id="0">Publish Now</button>
+            </section>
+        </div>
+    </div>
+</form>
+<!-- END TWEET FORM -->
 {% endblock %}
 
 <!-- THE SCRIPTS BLOCK -->
-{% block scripts %} {% endblock %}
+{% block scripts %}
+<script src="/js/common/handleMedia.js"></script>
+{% endblock %}
