fix: frontend forms.

--- a/views/home/home.html
+++ b/views/home/home.html
@@ -79,12 +79,20 @@
                 placeholder="What is happening?!"></textarea>
 
             <!-- THE LINK -->
-            <input
+            <!-- <input
                 type="url"
                 name="link"
                 class="form-input"
                 data-tweet-id="0"
-                placeholder="http(s)://(www.)example.org" />
+                placeholder="http(s)://(www.)example.org" /> -->
+
+            <!-- THE TAGS -->
+            <input
+                type="text"
+                name="tags"
+                class="form-input"
+                data-tweet-id="0"
+                placeholder="Twitter|elonmusk|Dominos" />
         </div>
 
         <!-- THE FORM DIVISION -->
