feat: form backend prep.

--- a/views/_base.html
+++ b/views/_base.html
@@ -85,18 +85,37 @@
             </button>
         </div>
 
+        <!-- THE LOADING ANIMATION -->
+        <div id="loading-overlay" class="hidden"></div>
+        <div id="loading-icon" class="hidden"></div>
+
         <!-- THE SCRIPTS -->
         <script>
             let apiURL = '/api/v1';
             let apiMiscURL = `${apiURL}/misc`;
+            let apiRetweetsURL = `${apiURL}/retweets`;
 
             let api = {
                 misc: {
                     indicator: `${apiMiscURL}/indicator`,
                 },
+                retweets: {
+                    get: {
+                        all: `${apiRetweetsURL}/all`,
+                        automated: `${apiRetweetsURL}/automated`,
+                        scheduled: `${apiRetweetsURL}/scheduled`,
+                    },
+                    create: `${apiRetweetsURL}/create`,
+                    update: `${apiRetweetsURL}/update`,
+                    delete: `${apiRetweetsURL}/delete`,
+                    publish: `${apiRetweetsURL}/publish`,
+                    reOrder: `${apiRetweetsURL}/re-order`,
+                },
             };
         </script>
+        <script src="/js/base/handleLoadingAnimation.js"></script>
         <script src="/js/base/handleError.js"></script>
+        <script src="/js/base/handleGetInput.js"></script>
         <script src="/js/base/handleIndicator.js"></script>
 
         <!-- THE SCRIPTS BLOCK -->
