--- a/views/home/home.html
+++ b/views/home/home.html
@@ -32,24 +32,39 @@
                 class="form-input"
                 data-retweet-id="0"
                 placeholder="http(s)://(www.)twitter.com/username/status/123456"
-                pattern="^https:\/\/twitter\.com\/(\w*)\/status\/(\d*)"
-                required />
+                pattern="^https:\/\/twitter\.com\/(\w*)\/status\/(\d*)" />
 
             <!-- THE TIME -->
             <input type="datetime-local" name="time" class="form-input" data-retweet-id="0" />
         </div>
 
+        <!-- THE PRIORITY -->
+        <input type="number" name="priority" class="form-input hidden" data-retweet-id="0" />
+
         <!-- THE FORM DIVISION -->
         <div class="form-division">
             <!-- THE BUTTONS -->
             <section class="form-buttons" data-retweet-id="0">
-                <button class="form-button form-button-schedule" data-retweet-id="0">Schedule</button>
+                <button
+                    class="form-button form-button-schedule"
+                    data-retweet-id="0"
+                    onclick="createRetweet(0, 'scheduled')">
+                    Schedule
+                </button>
 
-                <button class="form-button form-button-automate" data-retweet-id="0">
+                <button
+                    class="form-button form-button-automate"
+                    data-retweet-id="0"
+                    onclick="createRetweet(0, 'automated')">
                     <i class="fa-regular fa-paper-plane"></i>
                 </button>
 
-                <button class="form-button form-button-publish" data-retweet-id="0">Publish Now</button>
+                <button
+                    class="form-button form-button-publish"
+                    data-retweet-id="0"
+                    onclick="createRetweet(0, 'publish')">
+                    Publish Now
+                </button>
             </section>
         </div>
     </div>
@@ -118,6 +133,9 @@
             </section>
         </div>
 
+        <!-- THE PRIORITY -->
+        <input type="number" name="priority" class="form-input hidden" data-tweet-id="0" />
+
         <!-- THE FORM DIVISION -->
         <div class="form-division">
             <!-- THE TIME -->
@@ -142,4 +160,5 @@
 <!-- THE SCRIPTS BLOCK -->
 {% block scripts %}
 <script src="/js/common/handleMedia.js"></script>
+<script src="/js/common/handleCreateRetweet.js"></script>
 {% endblock %}
