--- a/views/home/home.html
+++ b/views/home/home.html
@@ -143,13 +143,23 @@
 
             <!-- THE FORM BUTTONS -->
             <section class="form-buttons" data-tweet-id="0">
-                <button class="form-button form-button-schedule" data-tweet-id="0">Schedule</button>
+                <button
+                    class="form-button form-button-schedule"
+                    data-tweet-id="0"
+                    onclick="createTweet(0, 'scheduled')">
+                    Schedule
+                </button>
 
-                <button class="form-button form-button-automate" data-tweet-id="0">
+                <button
+                    class="form-button form-button-automate"
+                    data-tweet-id="0"
+                    onclick="createTweet(0, 'automated')">
                     <i class="fa-regular fa-paper-plane"></i>
                 </button>
 
-                <button class="form-button form-button-publish" data-tweet-id="0">Publish Now</button>
+                <button class="form-button form-button-publish" data-tweet-id="0" onclick="createTweet(0, 'publish')">
+                    Publish Now
+                </button>
             </section>
         </div>
     </div>
@@ -160,5 +170,6 @@
 <!-- THE SCRIPTS BLOCK -->
 {% block scripts %}
 <script src="/js/common/handleMedia.js"></script>
-<script src="/js/common/handleCreateRetweet.js"></script>
+<script src="/js/common/tweets/handleCreateTweet.js"></script>
+<script src="/js/common/retweets/handleCreateRetweet.js"></script>
 {% endblock %}
