feat: retweets page tabs.

--- a/views/_base.html
+++ b/views/_base.html
@@ -31,11 +31,11 @@
                     </a>
                     <a href="/tweets">
                         <i class="fa-brands fa-square-twitter mobile-enabled icon"></i>
-                        <span class="desktop-enabled">Posts</span>
+                        <span class="desktop-enabled">Tweets</span>
                     </a>
                     <a href="/retweets">
                         <i class="fa-solid fa-retweet mobile-enabled icon"></i>
-                        <span class="desktop-enabled">Posts</span>
+                        <span class="desktop-enabled">Retweets</span>
                     </a>
                     <button onclick="handleLogin()">
                         <i class="fa-solid fa-arrow-right-to-bracket mobile-enabled icon"></i>
