feat: retweets ui.

--- a/sass/shared/_form.scss
+++ b/sass/shared/_form.scss
@@ -250,6 +250,10 @@
         }
     }
 
+    .form-extra-info {
+        text-align: center;
+    }
+
     .form-container,
     .form-division {
         display: flex;
