feat: tweets ui.

--- a/sass/common/re-no-tweets.scss
+++ b/sass/common/re-no-tweets.scss
@@ -123,6 +123,7 @@ body {
                         }
                     }
 
+                    .tweets,
                     .retweets {
                         gap: 50px;
                         display: flex;
