--- a/views/retweets/retweets.html
+++ b/views/retweets/retweets.html
@@ -49,7 +49,7 @@
                 data-retweet-id="{{ retweet.id }}"
                 onsubmit="event.preventDefault();">
                 <!-- THE INDEX -->
-                <p class="form-index hidden">{{ loop.index }}</p>
+                <p class="form-index">{{ loop.index }}</p>
 
                 <!-- THE HEADING -->
                 <h3 class="form-heading" data-retweet-id="{{ retweet.id }}">Create a Retweet</h3>
@@ -162,7 +162,7 @@
                 data-retweet-id="{{ retweet.id }}"
                 onsubmit="event.preventDefault();">
                 <!-- THE INDEX -->
-                <p class="form-index hidden">{{ loop.index }}</p>
+                <p class="form-index">{{ loop.index }}</p>
 
                 <!-- THE HEADING -->
                 <h3 class="form-heading" data-retweet-id="{{ retweet.id }}">Create a Retweet</h3>
