feat: delete tweet.

--- a/views/tweets/tweets.html
+++ b/views/tweets/tweets.html
@@ -353,7 +353,7 @@
 {% block scripts %}
 <script src="/js/common/handleMedia.js"></script>
 <script src="/js/common/tweets/handleCreateTweet.js"></script>
-<!-- <script src="/js/common/tweets/handleDeleteTweet.js"></script> -->
+<script src="/js/common/tweets/handleDeleteTweet.js"></script>
 
 <script src="/js/common/handleTabSwitch.js"></script>
 <script src="/js/common/handleReOrderSwitch.js"></script>
