feat: automated time on tweets and retweets.

--- a/views/retweets/retweets.html
+++ b/views/retweets/retweets.html
@@ -246,6 +246,8 @@
         </section>
     </section>
 </section>
+
+<input type="text" name="type" id="timesheet-type" class="hidden" value="retweet" />
 {% endblock %}
 
 <!-- THE SCRIPTS BLOCK -->
@@ -255,4 +257,5 @@
 
 <script src="/js/common/handleTabSwitch.js"></script>
 <script src="/js/common/handleReOrderSwitch.js"></script>
+<script src="/js/common/handleDateTimeOnAutomatedItems.js"></script>
 {% endblock %}
