--- a/views/tweets/tweets.html
+++ b/views/tweets/tweets.html
@@ -336,6 +336,8 @@
         </section>
     </section>
 </section>
+
+<input type="text" name="type" id="timesheet-type" class="hidden" value="tweet" />
 {% endblock %}
 
 <!-- THE SCRIPTS BLOCK -->
@@ -347,4 +349,5 @@
 <script src="/js/common/handleTabSwitch.js"></script>
 <script src="/js/common/handleReOrderSwitch.js"></script>
 <script src="/js/common/handleSecondaryGallery.js"></script>
+<script src="/js/common/handleDateTimeOnAutomatedItems.js"></script>
 {% endblock %}
